@@ -2,22 +2,29 @@ package sv.edu.ues.occ.web.ingenieria.sic135.instructoria.sistemacontable.bounda
 
 import jakarta.inject.Inject;
 import sv.edu.ues.occ.web.ingenieria.sic135.instructoria.sistemacontable.control.CuentaContableDAO;
-import sv.edu.ues.occ.web.ingenieria.sic135.instructoria.sistemacontable.control.TransaccionDAO;
+import sv.edu.ues.occ.web.ingenieria.sic135.instructoria.sistemacontable.control.TransaccionClasificacionDAO;
 import sv.edu.ues.occ.web.ingenieria.sic135.instructoria.sistemacontable.entity.CuentaContable;
 import sv.edu.ues.occ.web.ingenieria.sic135.instructoria.sistemacontable.entity.Transaccion;
+import sv.edu.ues.occ.web.ingenieria.sic135.instructoria.sistemacontable.entity.TransaccionClasificacion;
 
+import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
+import java.util.LinkedList;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class ClasificacionService {
 
-    @Inject
-    private TransaccionDAO transaccionDAO;
+    private static final Logger LOGGER = Logger.getLogger(ClasificacionService.class.getName());
 
     @Inject
     private CuentaContableDAO cuentaContableDAO;
+
+    @Inject
+    private TransaccionClasificacionDAO transaccionClasificacionDAO;
 
     private String clasificarPorReglas(String descripcion) {
         if (descripcion.contains("sueldo") || descripcion.contains("salario")) {
@@ -37,50 +44,58 @@ public class ClasificacionService {
             if (codigoSugerido != null) {
                 CuentaContable cc = cuentaContableDAO.findByCodigo(codigoSugerido);
                 if (cc != null) {
-                    List<CuentaContable> sugerencias = cuentaContableDAO.findCuentaPrincipales();
-                    sugerencias.add(0, cc); // Pone la sugerencia IA de primera
+                    // convertir a LinkedList para poder añadir al principio sin warning
+                    LinkedList<CuentaContable> sugerencias = new LinkedList<>(cuentaContableDAO.findCuentaPrincipales());
+                    sugerencias.addFirst(cc);
                     return sugerencias;
                 }
             }
             return cuentaContableDAO.findCuentaPrincipales();
         });
     }
+
     public boolean clasificarTransaccionManual(Transaccion transaccion, CuentaContable cuenta) {
         if (transaccion == null || cuenta == null) return false;
         try {
-            // La asignación de la cuenta contable marca la transacción como clasificada
-            transaccion.setCuentaContable(cuenta);
-            transaccion.setUpdatedAt(Instant.now());
-            transaccionDAO.edit(transaccion);
+            // Crear registro de clasificación asociado a la transacción
+            TransaccionClasificacion tc = new TransaccionClasificacion();
+            tc.setTransaccion(transaccion);
+            tc.setOrigen("MANUAL");
+            tc.setCuentaContableDebe(cuenta);
+            tc.setConfianzaClasificacion(new BigDecimal("1.00"));
+            tc.setCreatedAt(Instant.now());
+            transaccionClasificacionDAO.create(tc);
             return true;
         } catch (Exception e) {
+            LOGGER.log(Level.WARNING, "Error clasificando transaccion manualmente", e);
             return false;
         }
     }
 
     public CompletionStage<Boolean> clasificarTransaccionAutomatica(Transaccion transaccion) {
         return obtenerSugerenciasIA(transaccion)
-                .thenApply(sugerencias -> {
-                    if (!sugerencias.isEmpty()) {
-                        CuentaContable mejorSugerencia = sugerencias.get(0);
+                 .thenApply(sugerencias -> {
+                     if (!sugerencias.isEmpty()) {
+                        CuentaContable mejorSugerencia = sugerencias.getFirst();
                         return clasificarTransaccionManual(transaccion, mejorSugerencia);
-                    }
-                    return false;
-                });
-    }
+                     }
+                     return false;
+                 });
+     }
 
-    public CompletionStage<Integer> clasificarLoteAutomatico(List<Transaccion> transacciones) {
-        return CompletableFuture.supplyAsync(() -> {
-            int exitosas = 0;
-            for (Transaccion t : transacciones) {
-                try {
-                    if (clasificarTransaccionAutomatica(t).toCompletableFuture().get()) {
-                        exitosas++;
-                    }
-                } catch (Exception e) {
-                }
-            }
-            return exitosas;
-        });
-    }
-}
+     public CompletionStage<Integer> clasificarLoteAutomatico(List<Transaccion> transacciones) {
+         return CompletableFuture.supplyAsync(() -> {
+             int exitosas = 0;
+             for (Transaccion t : transacciones) {
+                 try {
+                     if (clasificarTransaccionAutomatica(t).toCompletableFuture().get()) {
+                         exitosas++;
+                     }
+                 } catch (Exception e) {
+                    LOGGER.log(Level.WARNING, "Error clasificando transaccion en lote", e);
+                 }
+             }
+             return exitosas;
+         });
+     }
+ }
